js/js.translator/testData/incremental/invalidation/class/main/m.kt

fun box() = Demo(100500) == Demo(15)
